--- a/public/about/index.html
+++ b/public/about/index.html
@@ -62,7 +62,14 @@
     
 
     <div class="article-content">
-      <p>This is a &ldquo;hello world&rdquo; example website for the <a href="https://github.com/rstudio/blogdown"><strong>blogdown</strong></a> package. The theme was forked from <a href="https://github.com/jrutheiser/hugo-lithium-theme">@jrutheiser/hugo-lithium-theme</a> and modified by <a href="https://github.com/yihui/hugo-lithium">Yihui Xie</a>.</p>
+      <p>Need to cross the computational bridge for projects?
+Need to know coding for a job position?
+UPC computer classes too far away?</p>
+
+<p>We are a group of students with experience in data science and coding for life science.</p>
+
+<p>We have biweekly lectures and hands on sessions designed for you!
+Come and join CodeOn! to improve your coding</p>
 
     </div>
   </article>
